adjusted the landing page

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ class="relative bg-[url(https://images.unsplash.com/photo-1552581234-26160f60809
                     class="inline-block mb-4 text-xs font-bold capitalize border-b-2 border-[#2389cf] hover:text-[#2389cf]">RESPONSIVE THEMES</a>
                 
                 <p class="mb-4">
-                  Our responsive themes ensure optimal viewing experiences across various devices and screen sizes. By employing flexible layouts, fluid grids, and media queries, our themes dynamically adjust content presentation to provide consistent and visually appealing interfaces on desktops, tablets, and smartphones. This adaptability enhances accessibility, usability, and user retention.
+                  Our responsive themes ensure optimal viewing experiences across various devices and screen sizes. By employing flexible layouts, fluid grids, and media queries, our themes dynamically adjust content presentation to provide consistent and visually appealing interfaces on desktops, tablets, and smartphones.<br/> This adaptability enhances accessibility, usability, and user retention.
                 </p>
             </div>
             <div>
@@ -344,14 +344,14 @@ class="relative bg-[url(https://images.unsplash.com/photo-1552581234-26160f60809
 </div>
 <!-- Call to action section end -->
 
-<!-- Vission section start -->
+<!-- Vision section start -->
 
 <div class="max-w-screen-xl mx-auto p-5 sm:p-10 md:p-16">
   <div class="lg:-mx-6 lg:flex lg:items-center">
      
 
       <div class="mt-8 lg:w-1/2 lg:px-6 lg:mt-0">
-          <p class="text-[15px] font-semibold text-[#2389cf] mission_header ">Vission</p>
+          <p class="text-[15px] font-semibold text-[#2389cf] mission_header ">Vision</p>
 
           <h1 class="text-2xl font-semibold text-gray-800  lg:text-3xl lg:w-96">
             Building a Friction-free Africa attractive for reverse migration
@@ -370,7 +370,7 @@ class="relative bg-[url(https://images.unsplash.com/photo-1552581234-26160f60809
   </div>
 </div>
 
-<!-- Vission section end -->
+<!-- Vision section end -->
 
 <!-- partner section start -->
 
