ajusted the media query

--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Yip, Nigeria YIP, Yip ng, business directory, yip nigeria, nigeria, niger, lagos, abuja, africa, west africa, money, jobs" />
+    <meta name="description" content="Your Internet Pages Online Portal - We provide a fully functional and affordable website within minutes. All our packages are dynmamic and mobile compatible " />
+    <link rel="shortcut icon" type="image/x-icon" href="/image/logo.png">
+		<link rel="apple-touch-icon" href="/image/logo.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="index.css">
-    <title>Document</title>
+    <title>YIP Online</title>
 </head>
 <body>
     
