--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 class="relative bg-[url(https://images.unsplash.com/photo-1552581234-26160f608093?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D)] bg-cover bg-center bg-no-repeat"
 >
 <div
-  class="absolute inset-0 lg:bg-black/45 sm:bg-transparent sm:from-black/45 sm:to-black/45 ltr:sm:bg-gradient-to-r rtl:sm:bg-gradient-to-l"
+  class="absolute inset-0 bg-black/45 "
 ></div>
 
 <div
@@ -339,7 +339,7 @@ class="relative bg-[url(https://images.unsplash.com/photo-1552581234-26160f60809
           </div>
           <div class="mt-10 md:mt-0">
               <a title="Get quote now"
-                  class="inline-flex items-center justify-center px-9 py-3.5 mt-5 text-base font-bold text-gray-900 text-xl  sm:text-[2px] duration-200 bg-white border border-transparent focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-white font-pj hover:bg-opacity-90 rounded-xl"
+                  class="inline-flex items-center justify-center px-9 py-3.5 mt-5  font-bold text-gray-900 text-[6px] lg:text-[20px] duration-200 bg-white border border-transparent focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-white font-pj hover:bg-opacity-90 rounded-xl"
                   href="#support"> Get quote now
               </a>
           </div>
@@ -383,7 +383,7 @@ class="relative bg-[url(https://images.unsplash.com/photo-1552581234-26160f60809
    Our Partners
   </h1>
   
-  <div class="grid grid-cols-1 md:grid-cols-3 sm:grid-cols-2 gap-10">
+  <div class="grid grid-cols-1 md:grid-cols-3 sm:grid-cols-2 gap-10 ">
     <div>
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/Hostinger_logo_black.svg/768px-Hostinger_logo_black.svg.png?20200807020843" alt="Card img" class="object-contain object-center w-full h-48" />
     </div>
