--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ class="relative bg-[url(https://images.unsplash.com/photo-1552581234-26160f60809
 
 <!-- Product section start -->
 <div class="max-w-screen-xl mx-auto p-5 sm:p-10 md:p-16">
-  <p class="text-[15px] font-semibold text-[#2389cf] mission_header ">SOLUTION PROVIDED</p>
+  <p class="text-[15px] font-semibold text-[#2389cf] mission_header mb-5 ">SOLUTION PROVIDED</p>
 
               <h1 class="text-2xl font-semibold text-gray-800  lg:text-3xl lg:w-96 pb-8">
                 We focus on bringing value 
@@ -188,7 +188,7 @@ class="relative bg-[url(https://images.unsplash.com/photo-1552581234-26160f60809
           <div class="grid grid-cols-1 gap-y-3 sm:grid-cols-2 gap-x-12 xl:gap-x-24">
               <div>
                   <ul class="space-y-3 text-base font-medium text-white font-pj">
-                      <li class="flex items-center">
+                      <li class="flex items-center ">
                           <svg class="w-5 h-5 mr-2" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                               stroke="currentColor">
                               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -339,7 +339,7 @@ class="relative bg-[url(https://images.unsplash.com/photo-1552581234-26160f60809
           </div>
           <div class="mt-10 md:mt-0">
               <a title="Get quote now"
-                  class="inline-flex items-center justify-center px-9 py-3.5 mt-5  font-bold text-gray-900 text-[6px] lg:text-[20px] duration-200 bg-white border border-transparent focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-white font-pj hover:bg-opacity-90 rounded-xl"
+                  class="inline-flex items-center justify-center px-2 lg:px-9 py-3.5 mt-5  font-bold text-gray-900 text-[10px] lg:text-[20px] duration-200 bg-white border border-transparent focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-white font-pj hover:bg-opacity-90 rounded-xl"
                   href="#support"> Get quote now
               </a>
           </div>
